--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,9 @@ flask==2.3.3
 flask-cors==4.0.0
 flask-socketio==5.3.6
 python-socketio==5.9.0
-eventlet==0.33.3
+eventlet>=0.36.0
+psutil
+sqlalchemy
+pytest
+prometheus-client
+plyer
